test/compile-fail/resolution/use/mod-super-mod/expected.txt
error: special identifier `super` can only be in the start position of a path
  ┌─ ./test/compile-fail/resolution/use/mod-super-mod/top.rhdl:3:8
  │
3 │ use a::super::a;
  │        ^^^^^

